<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.github.chav1961</groupId>
  <artifactId>creolenotepad</artifactId>
	<version>0.0.1</version>
	<description>Creole static content editor</description>
	<packaging>jar</packaging>
	<name>csce</name>

	<developers>
		<developer>
			<name>Alexander Chernomyrdin aka chav1961</name>
			<email>chav1961@mail.com</email>
			<organization>Alexander Chernomyrdin aka chav1961</organization>
			<organizationUrl>https://github.com/chav1961/</organizationUrl>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:git@github.com:chav1961/purelib.git</connection>
		<developerConnection>scm:git:git@github.com:chav1961/purelib.git</developerConnection>
		<url>https://github.com/chav1961/purelib</url>
  	</scm>
	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/chav1961/purelib/issues</url>
	</issueManagement>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://github.com/chav1961/purelib/blob/master/LICENSE</url>
		</license>
	</licenses>

    <repositories>
        <repository>
            <id>Any</id>
            <url>http://maven.nuiton.org/nexus/content/groups/releases</url>
        </repository>
    </repositories>
    
 	<properties>
		<github.global.server>github</github.global.server>
	</properties> 

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
	    <dependency>
			<groupId>com.github.chav1961</groupId>
			<artifactId>purelib</artifactId>
			<version>0.0.7</version>
	    </dependency>
		<!-- https://mvnrepository.com/artifact/com.alphacephei/vosk -->
		<dependency>
		    <groupId>com.alphacephei</groupId>
		    <artifactId>vosk</artifactId>
		    <version>0.3.45</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/net.java.dev.jna/jna -->
		<dependency>
		    <groupId>net.java.dev.jna</groupId>
		    <artifactId>jna</artifactId>
		    <version>5.7.0</version>
		</dependency>
		<dependency>
		    <groupId>net.sourceforge.tess4j</groupId>
		    <artifactId>tess4j</artifactId>
		    <version>4.0.1</version>
 			<exclusions>
            <exclusion>
              <groupId>org.jboss.logging</groupId>
              <artifactId>jboss-logging</artifactId>
            </exclusion>
          </exclusions> 		    
		</dependency>		
	</dependencies>

 	<distributionManagement>
 		<repository>
			<id>internal.repo</id>
			<name>Temporary Staging Repository</name>
			<url>file://${project.build.directory}/mvn-repo</url>
		</repository>
	</distributionManagement>
    
	<build>
		<finalName>creolenotepad</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
               	<version>3.8.1</version>
				<inherited>true</inherited>
				<configuration>
  					<source>9</source>
					<target>9</target>
				</configuration>
			</plugin>
			<plugin>
	            <artifactId>maven-resources-plugin</artifactId>
				<version>3.1.0</version>
	            <executions>
	                <execution>
	                	<id>copy-resources01</id>
	                    <phase>process-resources</phase>
	                    <goals>
	                        <goal>copy-resources</goal>
	                    </goals>
	                    <configuration>
	                        <outputDirectory>${basedir}/target/classes</outputDirectory>
	                        <resources>
	                            <resource>
	                                <directory>${basedir}/src/main/java</directory>
	                                <includes>
	                                    <include>**/*.*</include>
	                                </includes>
	                                <excludes>
	                                    <exclude>**/*.java</exclude>
	                                </excludes>
	                            </resource>
	                            <resource>
	                                <directory>${basedir}/src/main/resources</directory>
	                                <includes>
	                                    <include>**/*.*</include>
	                                </includes>
	                            </resource>
	                        </resources>
	                    </configuration>
	                </execution>
	                <execution>
	                	<id>copy-resources02</id>
	                    <phase>process-test-resources</phase>
	                    <goals>
	                        <goal>copy-resources</goal>
	                    </goals>
	                    <configuration>
	                        <outputDirectory>${basedir}/target/test-classes</outputDirectory>
	                        <resources>
	                            <resource>
	                                <directory>${basedir}/src/test/java</directory>
	                                <includes>
	                                    <include>**/*.*</include>
	                                </includes>
	                                <excludes>
	                                    <exclude>**/*.java</exclude>
	                                    <exclude>**/*.class</exclude>
	                                </excludes>
	                            </resource>
	                            <resource>
	                                <directory>${basedir}/src/test/resources</directory>
	                                <includes>
	                                    <include>**/*.*</include>
	                                </includes>
	                            </resource>
	                        </resources>
	                    </configuration>
	                </execution>
	            </executions>
	        </plugin>			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
               	<version>3.0.0-M4</version>
               	<configuration>
					<groups>chav1961.purelib.testing.OrdinalTestCategory</groups>
					<argLine>-Dsuppress.junit.trace=true</argLine>					
        		</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
               	<version>3.2.0</version>
				<inherited>true</inherited>
				<configuration>
					<archive>
						<index>false</index>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>./</classpathPrefix>
                            <mainClass>chav1961.creolenotepad.Application</mainClass>
						</manifest>
                       <manifestEntries>
                           <SplashScreen-Image>splash.jpg</SplashScreen-Image>
                       </manifestEntries>
					</archive>
				</configuration>
            </plugin>
		</plugins>
	</build>
</project>
	